blueprints/financial-advisers/salesforce/force-app/main/default/objects/Contact/fields/Client_status__c.field-meta.xml
<CustomField>
    <fullName>Client_status__c</fullName>
    <description>Where this person is with the practice. Drives views and which automations apply.</description>
    <label>Client status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Former client</fullName>
            </value>
            <value>
                <fullName>Professional contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>