blueprints/financial-advisers/salesforce/force-app/main/default/objects/Contact/fields/Date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_birth__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>DATA PROTECTION: personal data. Used for age-based planning and identity checks. Visible to advisers and administrators only.</description>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>