blueprints/financial-advisers/salesforce/force-app/main/default/objects/Contact/fields/Employment_status__c.field-meta.xml
<CustomField>
    <fullName>Employment_status__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>DATA PROTECTION: personal financial data. Needed to assess income and retirement planning.</description>
    <label>Employment status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Self-employed</fullName>
            </value>
            <value>
                <fullName>Company director</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Not working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>