blueprints/financial-advisers/salesforce/force-app/main/default/objects/Contact/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Groups the people in a client unit while each human keeps one record.</description>
    <label>Household</label>
    <referenceTo>Client_Household__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>