blueprints/financial-advisers/salesforce/force-app/main/default/objects/Contact/fields/Household_role__c.field-meta.xml
<CustomField>
    <fullName>Household_role__c</fullName>
    <description>The person's place in their household. Used to address correspondence and find the main contact.</description>
    <label>Household role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main client</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Dependant</fullName>
            </value>
            <value>
                <fullName>Attorney or trustee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>