blueprints/financial-advisers/salesforce/force-app/main/default/objects/Contact/fields/Id_verified__c.field-meta.xml
<CustomField>
    <fullName>Id_verified__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>DATA PROTECTION: identity checks are complete and the evidence is held in the document system, not in the CRM. Required before advice work starts.</description>
    <label>Identity verified</label>
    <type>Checkbox</type>
</CustomField>