blueprints/financial-advisers/salesforce/force-app/main/default/objects/Contact/fields/Marketing_consent__c.field-meta.xml
<CustomField>
    <fullName>Marketing_consent__c</fullName>
    <description>Whether the person agreed to receive newsletters and invitations. Respect it in every campaign and sync.</description>
    <label>Marketing consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opted in</fullName>
            </value>
            <value>
                <fullName>Opted out</fullName>
            </value>
            <value>
                <fullName>Not asked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>