blueprints/financial-advisers/salesforce/force-app/main/default/objects/Contact/fields/Preferred_contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_contact__c</fullName>
    <description>How the client prefers to be contacted. Used when booking reviews.</description>
    <label>Preferred contact method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Video call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>