blueprints/financial-advisers/salesforce/force-app/main/default/objects/Contact/fields/Vulnerability_flag__c.field-meta.xml
<CustomField>
    <fullName>Vulnerability_flag__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>DATA PROTECTION: may reveal health or personal circumstances. Records whether the client may need extra care or adjusted service. Visible to advisers and compliance only. Keep detail in the case notes, not here.</description>
    <label>Vulnerability flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None identified</fullName>
            </value>
            <value>
                <fullName>Possible</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>