blueprints/financial-advisers/salesforce/force-app/main/default/objects/Contact/listViews/Flagged_clients.listView-meta.xml
<ListView>
    <fullName>Flagged_clients</fullName>
    <columns>FULL_NAME</columns>
    <columns>Vulnerability_flag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vulnerability_flag__c</field>
        <operation>equals</operation>
        <value>Possible,Confirmed</value>
    </filters>
    <label>Clients with a vulnerability flag</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>